test/interaction/Issue3428.agda
kk : ∀ {ℓ} → Set ℓ
kk = {!∀ B → B!}
